--- a/morn-testweb/.settings/org.eclipse.wst.common.component
+++ b/morn-testweb/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="morn-context-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/morn-context/morn-context">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="morn-webmvc-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/morn-webmvc/morn-webmvc">
             <dependency-type>uses</dependency-type>
         </dependent-module>
